--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,50 @@
-name: Deploy to GitHub Pages
+name: Deploy React App
 
 on:
   push:
-    branches: [ "main" ]
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '16'
           cache: 'npm'
+          cache-dependency-path: './web/cuby/package-lock.json'
+      
       - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run build
+        run: |
+          cd web/cuby
+          npm ci
+      
+      - name: Build React app
+        run: |
+          cd web/cuby
+          npm run build
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './dist'
+          path: './web/cuby/build'
 
   deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
