--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build React app
         run: |
           cd web/cuby
-          npm run build
+          CI=false npm run build
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
